cambios en index.html principal

--- a/inicio/index.html
+++ b/inicio/index.html
@@ -9,6 +9,105 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!---------------------- Inicio del header --------------------->
+    <header>
+        <section class="menu-enlaces">
+            <nav class="logo">
+                <!---------------------- Logotipo --------------------->
+                <img class="logo-header" src="../assets/images/inicio/logo-blanco.png" alt="">
+            </nav>
+            <nav class="enlaces">
+                <!---------------------- Enlaces --------------------->
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Menú</a></li>
+                    <li><a href="#">Ubicaciones</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Sobre nosotros</a></li>
+                </ul>
+            </nav>
+        </section>
+    </header>
+    <!---------------------- Fin del header --------------------->
+    <!---------------------- Inicio del main --------------------->
+    <main>
+        <section class="jumbotron">
+            <article class="titulo">
+                <div class="elementos-jumbotron">
+                    <h1>Café Cancún</h1>
+                    <span>El Café Nos Complementa</span>
+                </div>
+                <div class="email">
+                    <div class="email-contacto">
+                        <input class="input-email" type="email" placeholder="Correo:" required>
+                        <input class="input-button" type="button" value="Enviar">
+                    </div>
+                    <div class="mensaje">
+                        <span>Recibiras un correo de innmediato con nuestro menú y las ofertas del día</span>
+                    </div>
+                </div>
+            </article>
+            <article>
+                <img src="../assets/images/inicio/imagen-jumbotron1.webp" alt="Imagen café negro">
+            </article>
+        </section>
+        <!---------------------- Café americano ---------------------->
+        <section class="menu-cafes">
+            <section class="cafe-americano">
+                <article class="menu-cafes">
+                    <div class="info-cafe">
+                        <div class="imagen-cafe">
+                            <img src="../assets/images/inicio/images-cafe-jpg/americano.JPG" alt="">
+                        </div>
+                        <div class="descripcion-cafe">
+                            <p><b>Café Americano</b></p><br>
+                            <span>$35</span>
+                        </div>
+                    </div>
+                </article>
+                <!---------------------- Café capuccino ---------------------->
+                <section class="cafe-capuccino">
+                    <article class="menu-cafes">
+                        <div class="info-cafe">
+                            <div class="imagen-cafe">
+                                <img src="../assets/images/inicio/images-cafe-jpg/capuccino.JPG" alt="">
+                            </div>
+                            <div class="descripcion-cafe">
+                                <p><b>Capuccino</b></p><br>
+                                <span>$45</span>
+                            </div>
+                        </div>
+                    </article>
+            </section>
+            <!---------------------- Café moka ---------------------->
+            <section class="cafe-moka">
+                    <article class="menu-cafes">
+                        <div class="info-cafe">
+                            <div class="imagen-cafe">
+                                <img src="../assets/images/inicio/images-cafe-jpg/moka.JPG" alt="">
+                            </div>
+                            <div class="descripcion-cafe">
+                                <p><b>Moka</b></p><br>
+                                <span>$55</span>
+                            </div>
+                        </div>
+                    </article>
+            </section>
+            <!---------------------- Café turco ---------------------->
+            <section class="cafe-moka">
+                    <article class="menu-cafes">
+                        <div class="info-cafe">
+                            <div class="imagen-cafe">
+                                <img src="../assets/images/inicio/images-cafe-jpg/turco.JPG" alt="">
+                            </div>
+                            <div class="descripcion-cafe">
+                                <p><b>turco</b></p><br>
+                                <span>$60</span>
+                            </div>
+                        </div>
+                    </article>
+            </section>
+        </section>
+    </main>
 </body>
 </html>
